--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 	<div class="item">
 		<ul>
 			<li onclick="here(this)">Getting Started</li>
-			<li onclick="here(this)">Create Shader Graph</li>
 			<li onclick="here(this)">Shader Graph Asset</li>
 			<li onclick="here(this)">Shader Graph Window</li>
+			<li onclick="here(this)">Create Shader Graph</li>
 			<li onclick="here(this)">First Shader Graph</li>
-			<li onclick="here(this)">Node-Library</li>
+			<li onclick="here(this)">Node Library</li>
 		</ul>
 	</div>
 	<div class="frame">
