--- a/Create-Shader-Graph.html
+++ b/Create-Shader-Graph.html
@@ -481,15 +481,15 @@ vertical-align:1px;
 <p>The Shader Graph window consists of the Master Node, the Preview Window, and the Blackboard.</p>
 <p><img src="images/ShaderGraphWindow.png" alt=""></p>
 <h3 id="master-node">Master node</h3>
-<p>The final connection that determines your shader output. See <a href="Master-Node">Master Node</a> for more information.</p>
+<p>The final connection that determines your shader output. See <a href="Master-Node.html">Master Node</a> for more information.</p>
 <p><img src="images/MasterNode.png" alt=""></p>
 <h3 id="preview-window">Preview window</h3>
-<p>An area to preview the current shader output. Here, you can rotate the object, and zoom in and out. You can also change the basic mesh on which the shader is previewed. See <a href="Master-Preview">Master Preview</a> for more information.</p>
+<p>An area to preview the current shader output. Here, you can rotate the object, and zoom in and out. You can also change the basic mesh on which the shader is previewed. See <a href="Master-Preview.html">Master Preview</a> for more information.</p>
 <p><img src="images/MainPreview.png" alt="img"></p>
 <h3 id="blackboard">Blackboard</h3>
-<p>An area that contains all of the shader&#39;s properties in a single, collected view. Use the Blackboard to add, remove, rename, and reorder properties. See <a href="Blackboard">Blackboard</a> for more information.</p>
+<p>An area that contains all of the shader&#39;s properties in a single, collected view. Use the Blackboard to add, remove, rename, and reorder properties. See <a href="Blackboard.html">Blackboard</a> for more information.</p>
 <p><img src="images/Blackboard.png" alt=""></p>
-<p>After you&#39;ve set up a project, and become familiar with the Shader Graph window, see <a href="First-Shader-Graph">My first Shader Graph</a> for more information on how to get started.</p>
+<p>After you&#39;ve set up a project, and become familiar with the Shader Graph window, see <a href="First-Shader-Graph.html">My first Shader Graph</a> for more information on how to get started.</p>
 
 </body>
 </html>
